# SimDB

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  LICENCE  LICENCE.txt  LICENSE.md  MANIFEST.in  README.md  alembic.ini  database.sh  dev_requirements.txt  init.sh  mypy.ini  pyproject.toml  requirements-server.txt  requirements.txt  setup.cfg  setup.py  simdb.db  simdb.sh  versioneer.py
.github/: CODEOWNERS
.github/workflows/: build_and_test.yml  build_docs.yml  publish.yml
alembic/: env.py  script.py.mako
alembic/versions/: 21f2b1287595_create_init_tables.py  9e9a4a7cd639_make_watcher_email_not_nullable.py  c84b85ae4bed_initial_migration.py
ci/: build_and_test.sh  build_docs.sh
cli/: commands.py  file_system.py  manifest.py  remote_api.py  simdb  simdb.py  simdb.sh
cli/simdb/: __main__.py  commands.py  database.py  manifest.py  remote_api.py  simdb.py  template.yaml
docs/: .gitignore  cli.md  conf.py  design.md  developer_guide.md  genapidocs.sh  generate_cli_docs.py  index.rst  install_guide.md  iter_certificate.md  iter_remotes.md  maintaintence_guide.md  maintenance_guide.md  simdb.checksum.rst  simdb.cli.rst  simdb.cli.simdb.rst  simdb.config.rst  simdb.database.database.rst  simdb.database.rst  simdb.docstrings.rst  simdb.imas.rst  simdb.imas.utils.rst  simdb.remote.app.rst  simdb.remote.rst  simdb.rst  simdb.uda.checksum.rst  simdb.uda.rst  tutorial.md  user_guide.md
docs/sphinx/: conf.py  index.rst  simdb.cli.commands.rst  simdb.cli.file_system.rst  simdb.cli.manifest.rst  simdb.cli.provenance.rst  simdb.cli.remote_api.rst  simdb.config.config.rst  simdb.database.models.rst  simdb.database.rst  simdb.imas.rst  simdb.imas.validation.rst  simdb.remote.api.rst  simdb.remote.rst  simdb.rst  simdb.validation.rst
remote/: api.py  run.sh
scripts/: iter_yaml_to_simdb.py  simdb  simdb.initd  simdb_legacy_importer.py  simdb_server
simdb/: __init__.py  checksum.py  docstrings.py  provenance.py  utils.py  validation.py
simdb/cli/: commands.py  config.py  manifest.py  provenance.py  remote_api.py  simdb.py  template.yaml
simdb/config/: __init__.py  config.py
simdb/database/: database.py  models.py
simdb/imas/: utils.py  validation.py
simdb/remote/: __init__.py  api.py  app.cfg  app.py  openssl.cnf  run.sh  setup.md
simdb/uda/: checksum.py
sql/: create.sql  drop.sql  manage.py  test2.py
src/simdb/: __init__.py  _version.py  checksum.py  docstrings.py  json.py  notifications.py  query.py  uri.py  validation.py
src/simdb/cli/: __init__.py  __main__.py  commands.py  manifest.py  provenance.py  remote_api.py  simdb.py  template.yaml
src/simdb/cli/commands/: __init__.py  _base.py  alias.py  config.py  database.py  delete.py  info.py  ingest.py  list.py  manifest.py  modify.py  provenance.py  push.py  query.py  remote.py  simulation.py  summary.py  utils.py  validate.py  validators.py
src/simdb/config/: __init__.py  config.py
src/simdb/database/: __init__.py  database.py  models.py
src/simdb/database/models/: __init__.py  _base.py  base.py  controlled_vocabulary.py  file.py  metadata.py  provenance.py  simulation.py  summary.py  types.py  utils.py  validation.py  watcher.py
src/simdb/email/: server.py
src/simdb/imas/: __init__.py  checksum.py  imas_metadata.yaml  iter_validation.yaml  metadata.py  utils.py  validation.py
src/simdb/remote/: __init__.py  api.py  app.cfg  app.py  cache.py  models.py  run.sh  simdb.initd  wsgi.py
src/simdb/remote/apis/: __init__.py  files.py  metadata.py  simulations.py  watchers.py
src/simdb/remote/apis/v1/: __init__.py  files.py  simulations.py  watchers.py
src/simdb/remote/apis/v1_1/: __init__.py  files.py  metadata.py  simulations.py
src/simdb/remote/apis/v1_2/: __init__.py  simulations.py
src/simdb/remote/core/: alias.py  auth.py  cache.py  errors.py  path.py  typing.py
src/simdb/remote/core/auth/: __init__.py  _authenticator.py  _user.py  active_directory.py  firewall.py  keycloak.py  ldap.py  no_authentication.py  token.py
src/simdb/uda/: __init__.py  checksum.py
src/simdb/validation/: __init__.py  validator.py
src/simdb/validation/file/: __init__.py  ids_validator.py  validator_base.py
tests/: locust.yaml  manifest.yaml  test0.yaml  test_uri.py  tests.py
tests/cli/: config_utils.py  test_cli_alias_command.py  test_cli_config_command.py  test_cli_database_command.py  test_cli_manifest_command.py  test_cli_provenance_command.py  test_cli_remote_command.py  test_cli_simulation_command.py  utils.py
tests/cli/commands/: test_alias_command.py  test_config_command.py  test_database_command.py  test_delete_command.py  test_info_command.py  test_ingest_command.py  test_list_command.py  test_manifest_command.py  test_modify_command.py  test_provenance_command.py  test_push_command.py  test_query_command.py  test_remote_command.py  test_simulation_command.py  test_summary_command.py  test_validate_command.py
tests/config/: test_config.py
tests/database/: test_database.py  test_models.py
tests/remote/: test_api.py  test_authentication.py
tests/remote/api/: conftest.py  test_files.py  test_metadata.py  test_simulations.py  test_staging.py  test_watchers.py
validation/: iter_scenarios_validation.yaml
