[build-system]
requires = ["setuptools>=42.0", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=simdb"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "simdb/_version.py"
versionfile_build = "simdb/_version.py"
tag_prefix = ""
parentdir_prefix = ""
