[build-system]
requires = ["setuptools>=42.0", "wheel", "setuptools_scm>8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/simdb/_version.py"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
addopts = "--cov=simdb"
testpaths = [
    "tests",
]

[tool.pyright]
venvPath = "."
venv = "venv"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
