[metadata]
name = simdb
description = ITER Simulation Management Tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Jonathan Hollocombe
license = See LICENCE
license_files = LICENCE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
package_dir =
    =src
install_requires =
    Cerberus (>=1.3.2)
    PyJWT (>=1.4.0)
    appdirs (>=1.4)
    appdirs (>=1.4.0)
    argcomplete (>=1.9.4)
    backports-datetime-fromisoformat (>=1.0)
    click (>=7.0)
    click_option_group (>=0.5)
    distro (>=1.8.0)
    distro==1.8.0
    email-validator (>=1.1)
    numpy (>=1.14)
    python-dateutil (>=2.6)
    pyyaml (>=3.13)
    requests (>=2.27.0)
    semantic-version (>=2.8)
    sqlalchemy (>=1.2.12,<2.0)
    urllib3 (>=1.26)
python_requires = >=3.6
zip_safe = no
scripts =
    scripts/simdb
    scripts/simdb_server

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
server =
    Flask>=2.0
    Werkzeug==2.0.3
    flask-caching>=1.10
    flask-compress>=1.12
    flask-cors>=3
    flask-mail~=0.9.1
    flask-restx==0.5
    python-magic~=0.4
    simplejson~=3.0
auth-ad =
    easyad>=1.0
auth-keycloak =
    python-keycloak>=4.0
auth-ldap =
    ldap>=3.4

[options.package_data]
simdb =
    py.typed
    LICENSE
simdb.cli =
    template.yaml
simdb.remote =
    scripts/simdb.initd
    scripts/simdb.nginx

[flake8]
max-line-length = 160

[versioneer]
VCS = git
style = pep440
versionfile_source = src/simdb/_version.py
versionfile_build = simdb/_version.py
tag_prefix =
parentdir_prefix =
